--- a/main.css
+++ b/main.css
@@ -1,4 +1,67 @@
-h1 {
-  color: red;
+body {
+	overflow: scroll;
+	font-family: 'Work Sans', sans-serif;
 }
+
+.wrapper {
+	padding: 4%;
+}
+
+header{
+	margin-top: 10vh;
+	background-color: #1C2127;
+}
+
+.flex-container {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: flex-start;
+}
+
+
+section#personalImage {
+	background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/35534/personal.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 100px;
+	width: 100px;
+	
+	border: 4px solid white;
+	margin-top: -10vh;
+}
+
+#bio {
+	color: #fff; 
+	width: 90%;
+	padding: 2%;
+	line-height: 1.25;
+}
+
+#bio h2 {
+	font-size: 1.5em;
+}
+
+#bio p {
+	margin-bottom: 6%;
+	line-height: 1.75;
+}
+
+.button {
+	padding: 2% 5%;
+	background-color: #F9C226;
+	color: #333;
+	border-radius: 50px;
+}
+
+a.button {
+	color: #1C2127;
+	text-decoration: none;
+	text-transform: uppercase; 
+}
+
+a.button:hover {
+	background-color: #DC9A0B;
+}
+
 
