--- a/main.css
+++ b/main.css
@@ -24,10 +24,8 @@ section#personalImage {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	height: 100px;
-	width: 100px;
-	
-	border: 4px solid white;
+	height: 50vh;
+	width: 90vw;
 	margin-top: -10vh;
 }
 
