--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 header{
-	margin-top: 10vh;
+	margin-top: 30vh;
 	background-color: #1C2127;
 }
 
@@ -24,9 +24,9 @@ section#personalImage {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	height: 50vh;
+	height: 60vh;
 	width: 90vw;
-	margin-top: -10vh;
+	margin-top: -30vh;
 }
 
 #bio {
@@ -46,19 +46,21 @@ section#personalImage {
 }
 
 .button {
-	padding: 2% 5%;
+	padding: 3%;
+	width: 100%;
 	background-color: #F9C226;
-	color: #333;
 	border-radius: 50px;
+	text-align: center;
 }
 
-a.button {
+.button a {
 	color: #1C2127;
 	text-decoration: none;
 	text-transform: uppercase; 
 }
 
-a.button:hover {
+
+.button:hover {
 	background-color: #DC9A0B;
 }
 
