--- a/main.css
+++ b/main.css
@@ -159,7 +159,7 @@ section#personalImage {
 }
 
 #amazon {
-	background: url('assets/amazon.png');
+	background: url('assets/amazon.jpg');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
